--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
 
     <!-- Thumbnail image/gif -->
-    <meta property="og:image" content="https://raw.githubusercontent.com/discowd-nitro/media-files/main/media/huh.gif">
+    <meta property="og:image" content="https://raw.githubusercontent.com/aohishere/dont-touch-my-pizza
+/main/media/videoplayback.mp4">
     <meta property="og:type" content="video.other">
     
     <!-- Video Link -->
